# sEMG-PD

./: .gitignore  README.md  _main.py  data_structure.txt  feature_ds.txt  main.py  manual_feature.txt  pyproject.toml
config/: config.json  data_config.yml  model_config.yml  training_config.yml
data/UCR/Beef/: X.npy  X_train.npy  X_valid.npy  y.npy
experiments/: experiments_manager.py
experiments/ablation/: feature_ablation.py  feature_ablation_config.yaml
experiments/utils/: feature_selection.py
scripts/: cnn_lstm_classification.py  main.py  rocket.py  run_ablation.py  test_cuda.py
src/: main.py
src/config/: ROCKETGait.yaml  config.py  experiment1.yaml
src/config/data_config/: experiment1.yaml  new_raw.yaml  old_raw.yaml
src/core/: factories.py  pipeline_factory.py
src/data_processing/: _pre_process.py  data_loader.py  pre_process.py  read_data.py
src/feature_engineering/: basic_param.py  features_extraction.py
src/interfaces/: classification.py  data.py  feature.py  preprocess.py  split.py
src/modeling/regression/: classic_svm.py
src/modeling/unsupervised/: autoencoder.py  cluster.py
src/pipeline/: pipeline.py
src/pipeline/classification/: ROCKET.py  svc.py
src/pipeline/data/: data_loader.py  (+1 more)
src/utils/: load_config.py  model_evaluation.py  param_tunning.py  plot_signal.py  save_dict.py  save_model.py  visualization.py
tests/: conftest.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_data_loader.py  test_data_loader_factory.py  test_feature_extractor.py  test_feature_extractor_factory.py  test_model_trainer.py
(+8 files in other folders)
