[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pd-semg"
version = "0.0.0"
authors = [
    { name="Jacob Patrick", email="lumivoxflow@gmail.com" }
]
dependencies = [
    "numpy>=1.18.0",
    "pandas>=1.0.0",
    "matplotlib>=3.0.0",
]

[tool.black]
line-length = 80
target-version = ['py311']
skip-string-normalization = true
exclude = '''
/config/
/data/
/logs/
/reports/
.gitignore
README.md
'''